# F1-strategy-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml  tests.yml
app/: dashboard.py
models/: lap_time_model.joblib  metadata.json  metrics.json
scripts/: build_dataset.py  train.py
src/f1strategy/: data.py  features.py  model.py  strategy.py
src/f1strategy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_features.py  test_strategy.py
